--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script defer src="index.js"></script>
 </head>
 <body>
-    
+   <p id="simple text">Simple HTML element to hold text.</p> 
 </body>
 </html>
